--- a/contact.html
+++ b/contact.html
@@ -169,7 +169,7 @@
     <div class="form-group">
       <label for="images">Ajouter des images (facultatif) :</label>
       <div id="drop-zone">
-        <img src="./images/icones/dwlnd.png" alt="Icône Upload" class="upload-icon" />
+        <img src="/images/icones/dwlnd.png" alt="Icône Upload" class="upload-icon" />
         <p>Glissez vos images ici ou cliquez pour sélectionner</p>
         <input type="file" id="images" name="Images[]" accept="image/*" multiple>
       </div>
