--- a/entretien.html
+++ b/entretien.html
@@ -31,7 +31,7 @@
     }
 
     .header {
-      background-image: url('./images/Bandeau.png');
+      background-image: url('/images/Bandeau.png');
       background-size: cover;
       background-position: center;
       height: auto;
@@ -328,11 +328,11 @@
       </ul>
     </nav>
     <div class="hero">
-      <img src="./images/logo.png" alt="Logo Restaur Real Auto" class="logo" />
+      <img src="/images/logo.png" alt="Logo Restaur Real Auto" class="logo" />
     </div>
     <div class="header-icons">
-      <img src="./images/icones/calendrier.png" alt="Calendrier" />
-      <img src="./images/icones/utilisateur.png" alt="Utilisateur" />
+      <img src="/images/icones/calendrier.png" alt="Calendrier" />
+      <img src="/images/icones/utilisateur.png" alt="Utilisateur" />
     </div>
   </header>
 
@@ -347,13 +347,13 @@
 
         <div class="card">
           <div class="image-container">
-            <img src="./images/entretien.jpg" alt="Vidange" />
+            <img src="/images/entretien.jpg" alt="Vidange" />
           </div>
-          <img src="./images/icones/vidange.png" alt="Vidange Icon" class="icon" />
+          <img src="/images/icones/vidange.png" alt="Vidange Icon" class="icon" />
           <h3>Vidange</h3>
           <div class="price">À partir de 49€</div>
           <div class="overlay">
-            <img src="./images/icones/vidange.png" alt="Vidange Icon" class="icon" />
+            <img src="/images/icones/vidange.png" alt="Vidange Icon" class="icon" />
             <ul>
               <li>Changement d’huile moteur</li>
               <li>Remplacement du filtre</li>
@@ -365,13 +365,13 @@
 
         <div class="card">
           <div class="image-container">
-            <img src="./images/entretien.jpg" alt="Pneumatique" />
+            <img src="/images/entretien.jpg" alt="Pneumatique" />
           </div>
-          <img src="./images/icones/pneu.png" alt="Pneumatique Icon" class="icon" />
+          <img src="/images/icones/pneu.png" alt="Pneumatique Icon" class="icon" />
           <h3>Pneumatique</h3>
           <div class="price">À partir de 39€</div>
           <div class="overlay">
-            <img src="./images/icones/pneu.png" alt="Pneumatique Icon" class="icon" />
+            <img src="/images/icones/pneu.png" alt="Pneumatique Icon" class="icon" />
             <ul>
               <li>Vente de pneus</li>
               <li>Montage et équilibrage</li>
@@ -384,13 +384,13 @@
 
         <div class="card">
           <div class="image-container">
-            <img src="./images/entretien.jpg" alt="Freinage" />
+            <img src="/images/entretien.jpg" alt="Freinage" />
           </div>
-          <img src="./images/icones/frein.png" alt="Freinage Icon" class="icon" />
+          <img src="/images/icones/frein.png" alt="Freinage Icon" class="icon" />
           <h3>Freinage</h3>
           <div class="price">À partir de 59€</div>
           <div class="overlay">
-            <img src="./images/icones/frein.png" alt="Freinage Icon" class="icon" />
+            <img src="/images/icones/frein.png" alt="Freinage Icon" class="icon" />
             <ul>
               <li>Inspection des plaquettes et disques</li>
               <li>Remplacement des pièces usées</li>
@@ -402,13 +402,13 @@
 
         <div class="card">
           <div class="image-container">
-            <img src="./images/entretien.jpg" alt="Diagnostics" />
+            <img src="/images/entretien.jpg" alt="Diagnostics" />
           </div>
-          <img src="./images/icones/diagnostic.png" alt="Diagnostics Icon" class="icon" />
+          <img src="/images/icones/diagnostic.png" alt="Diagnostics Icon" class="icon" />
           <h3>Diagnostics</h3>
           <div class="price">À partir de 29€</div>
           <div class="overlay">
-            <img src="./images/icones/diagnostic.png" alt="Diagnostics Icon" class="icon" />
+            <img src="/images/icones/diagnostic.png" alt="Diagnostics Icon" class="icon" />
             <ul>
               <li>Analyse électronique complète</li>
               <li>Détection des anomalies</li>
@@ -420,13 +420,13 @@
 
         <div class="card">
           <div class="image-container">
-            <img src="./images/entretien.jpg" alt="Révision complète" />
+            <img src="/images/entretien.jpg" alt="Révision complète" />
           </div>
-          <img src="./images/icones/revision.png" alt="Révision Icon" class="icon" />
+          <img src="/images/icones/revision.png" alt="Révision Icon" class="icon" />
           <h3>Révision complète</h3>
           <div class="price">À partir de 99€</div> <!-- Ajoutez le prix ici -->
           <div class="overlay">
-            <img src="./images/icones/revision.png" alt="Révision Icon" class="icon" />
+            <img src="/images/icones/revision.png" alt="Révision Icon" class="icon" />
             <ul>
               <li>Entretien global</li>
               <li>Inclusion de tous les points de contrôle constructeur</li>
@@ -437,13 +437,13 @@
         
         <div class="card">
           <div class="image-container">
-            <img src="./images/entretien.jpg" alt="Batterie" />
+            <img src="/images/entretien.jpg" alt="Batterie" />
           </div>
-          <img src="./images/icones/batterie.png" alt="Batterie Icon" class="icon" />
+          <img src="/images/icones/batterie.png" alt="Batterie Icon" class="icon" />
           <h3>Batterie</h3>
           <div class="price">À partir de 69€</div> <!-- Ajoutez le prix ici -->
           <div class="overlay">
-            <img src="./images/icones/batterie.png" alt="Batterie Icon" class="icon" />
+            <img src="/images/icones/batterie.png" alt="Batterie Icon" class="icon" />
             <ul>
               <li>Test de la batterie</li>
               <li>Recharge si nécessaire</li>
@@ -460,13 +460,13 @@
 
   <footer>
     <div class="footer-icons">
-      <img src="./images/icones/appel-telephonique.png" alt="Téléphone" />
-      <img src="./images/icones/email.png" alt="Email" />
+      <img src="/images/icones/appel-telephonique.png" alt="Téléphone" />
+      <img src="/images/icones/email.png" alt="Email" />
     </div>
     <p>© 2024 Restaur Real Auto</p>
     <div class="footer-icons">
-      <img src="./images/icones/google-maps.png" alt="Localisation" />
-      <img src="./images/icones/instagram.png" alt="Instagram" />
+      <img src="/images/icones/google-maps.png" alt="Localisation" />
+      <img src="/images/icones/instagram.png" alt="Instagram" />
     </div>
   </footer>
 
