--- a/evenementiel.html
+++ b/evenementiel.html
@@ -269,11 +269,11 @@
             </ul>
         </nav>
         <div class="hero">
-            <img src="./images/logo.png" alt="Logo Restaur Real Auto" class="logo" />
+            <img src="/images/logo.png" alt="Logo Restaur Real Auto" class="logo" />
         </div>
         <div class="header-icons">
-            <img src="./images/icones/calendrier.png" alt="Calendrier" />
-            <img src="./images/icones/utilisateur.png" alt="Utilisateur" />
+            <img src="/images/icones/calendrier.png" alt="Calendrier" />
+            <img src="/images/icones/utilisateur.png" alt="Utilisateur" />
         </div>
     </header>
 
@@ -284,7 +284,7 @@
             <div class="vehicle-carousel" id="vehicleCarousel">
                 <div class="vehicle-slide">
                     <div class="vehicle-image-container">
-                        <img src="./images/CLASSE.jpg" alt="Mercedes Classe E" class="vehicle-image" />
+                        <img src="/images/CLASSE.jpg" alt="Mercedes Classe E" class="vehicle-image" />
                     </div>
                     <div class="vehicle-details">
                         <h3>Mercedes Classe E</h3>
@@ -295,7 +295,7 @@
                 </div>
                 <div class="vehicle-slide">
                     <div class="vehicle-image-container">
-                        <img src="./images/AUDIA6.webp" alt="Audi A6" class="vehicle-image" />
+                        <img src="/images/AUDIA6.webp" alt="Audi A6" class="vehicle-image" />
                     </div>
                     <div class="vehicle-details">
                         <h3>Audi A6</h3>
@@ -306,7 +306,7 @@
                 </div>
                 <div class="vehicle-slide">
                     <div class="vehicle-image-container">
-                        <img src="./images/SERIE5.jpg" alt="BMW Série 5" class="vehicle-image" />
+                        <img src="/images/SERIE5.jpg" alt="BMW Série 5" class="vehicle-image" />
                     </div>
                     <div class="vehicle-details">
                         <h3>BMW Série 5</h3>
@@ -317,7 +317,7 @@
                 </div>
                 <div class="vehicle-slide">
                     <div class="vehicle-image-container">
-                        <img src="./images/EVOQUE.jpg" alt="Range Rover Evoque" class="vehicle-image" />
+                        <img src="/images/EVOQUE.jpg" alt="Range Rover Evoque" class="vehicle-image" />
                     </div>
                     <div class="vehicle-details">
                         <h3>Range Rover Evoque</h3>
@@ -328,7 +328,7 @@
                 </div>
                 <div class="vehicle-slide">
                     <div class="vehicle-image-container">
-                        <img src="./images/TURBOS.webp" alt="Porsche Cayenne" class="vehicle-image" />
+                        <img src="/images/TURBOS.webp" alt="Porsche Cayenne" class="vehicle-image" />
                     </div>
                     <div class="vehicle-details">
                         <h3>Porsche Cayenne</h3>
@@ -379,13 +379,13 @@
 
     <footer role="contentinfo">
         <div class="footer-icons left">
-            <img src="./images/icones/appel-telephonique.png" alt="Téléphone" />
-            <img src="./images/icones/email.png" alt="Email" />
+            <img src="/images/icones/appel-telephonique.png" alt="Téléphone" />
+            <img src="/images/icones/email.png" alt="Email" />
         </div>
         <p>&copy; 2024 Restaur Real Auto</p>
         <div class="footer-icons right">
-            <img src="./images/icones/google-maps.png" alt="Localisation" />
-            <img src="./images/icones/instagram.png" alt="Instagram" />
+            <img src="/images/icones/google-maps.png" alt="Localisation" />
+            <img src="/images/icones/instagram.png" alt="Instagram" />
         </div>
     </footer>
 
