--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         /* HEADER & NAVIGATION */
         .header {
-            background-image: url('../images/Bandeau.png');
+            background-image: url('./images/Bandeau.png');
             background-size: cover;
             background-position: center;
             height: auto;
@@ -751,11 +751,11 @@
             </ul>
         </nav>
         <div class="hero">
-            <img src="../images/logo.png" alt="Logo Restaur Real Auto" class="logo" />
+            <img src="./images/logo.png" alt="Logo Restaur Real Auto" class="logo" />
         </div>
         <div class="header-icons">
-            <img src="../images/icones/calendrier.png" alt="Calendrier" />
-            <img src="../images/icones/utilisateur.png" alt="Utilisateur" />
+            <img src="./images/icones/calendrier.png" alt="Calendrier" />
+            <img src="./images/icones/utilisateur.png" alt="Utilisateur" />
         </div>
     </header>
 
@@ -765,7 +765,7 @@
             <div class="card">
                 <div class="card-inner">
                     <div class="card-front">
-                        <img src="../images/restauration.jpg" alt="Restauration" />
+                        <img src="./images/restauration.jpg" alt="Restauration" />
                         <p>Restauration</p>
                     </div>
                     <div class="card-back">
@@ -777,7 +777,7 @@
             <div class="card">
                 <div class="card-inner">
                     <div class="card-front">
-                        <img src="../images/entretien.jpg" alt="Entretien" />
+                        <img src="./images/entretien.jpg" alt="Entretien" />
                         <p>Entretien</p>
                     </div>
                     <div class="card-back">
@@ -789,7 +789,7 @@
             <div class="card">
                 <div class="card-inner">
                     <div class="card-front">
-                        <img src="../images/nettoyage.jpg" alt="Nettoyage" />
+                        <img src="./images/nettoyage.jpg" alt="Nettoyage" />
                         <p>Nettoyage</p>
                     </div>
                     <div class="card-back">
@@ -801,7 +801,7 @@
             <div class="card">
                 <div class="card-inner">
                     <div class="card-front">
-                        <img src="../images/mariage.jpg" alt="Événementiel" />
+                        <img src="./images/mariage.jpg" alt="Événementiel" />
                         <p>Événementiel</p>
                     </div>
                     <div class="card-back">
@@ -856,19 +856,19 @@
               <h2>Informations de Contact</h2>
               <div class="contact-details">
                   <div class="contact-item" style="display: flex; flex-direction: column; align-items: center; text-align: center;">
-                      <a href="https://goo.gl/maps/your-map-link" target="_blank"><img src="../images/icones/google-maps.png" alt="Localisation" title="Localisation" class="social-icon" style="margin-bottom: 10px;"/></a>
+                      <a href="https://goo.gl/maps/your-map-link" target="_blank"><img src="./images/icones/google-maps.png" alt="Localisation" title="Localisation" class="social-icon" style="margin-bottom: 10px;"/></a>
                       <p style="margin: 0;"><strong>Adresse :</strong> <a href="https://goo.gl/maps/your-map-link" target="_blank">123 Rue Exemple, 75000 Paris, France</a></p>
                   </div>
                   <div class="contact-item" style="display: flex; flex-direction: column; align-items: center; text-align: center;">
-                      <img src="../images/icones/appel.png" alt="Téléphone" style="margin-bottom: 10px;"/>
+                      <img src="./images/icones/appel.png" alt="Téléphone" style="margin-bottom: 10px;"/>
                       <p style="margin: 0;"><strong>Téléphone :</strong> <a href="tel:+33123456789">+33 1 23 45 67 89</a></p>
                   </div>
                   <div class="contact-item" style="display: flex; flex-direction: column; align-items: center; text-align: center;">
-                      <img src="../images/icones/e-mail.png" alt="Email" style="margin-bottom: 10px;"/>
+                      <img src="./images/icones/e-mail.png" alt="Email" style="margin-bottom: 10px;"/>
                       <p style="margin: 0;"><strong>Email :</strong> <a href="mailto:contact@restaurrealauto.com">contact@restaurrealauto.com</a></p>
                   </div>
                   <div class="contact-item" style="display: flex; flex-direction: column; align-items: center; text-align: center;">
-                      <img src="../images/icones/lhorloge.png" alt="Horaires" style="margin-bottom: 10px;"/>
+                      <img src="./images/icones/lhorloge.png" alt="Horaires" style="margin-bottom: 10px;"/>
                       <p style="margin: 0;"><strong>Horaires :</strong> <a> Lun-Ven: 9h - 18h, Sam: 10h - 16h </a></p>
                   </div>
               </div>
@@ -908,7 +908,7 @@
                         <label for="images">Ajouter des images (facultatif) :</label>
                         <div id="drop-zone" class="file-input-wrapper">
                             <label for="images" class="file-input-label">
-                                <img src="../images/dwlnd.png" alt="Icône Upload" class="upload-icon" />
+                                <img src="./images/dwlnd.png" alt="Icône Upload" class="upload-icon" />
                                 <p>Glissez vos images ici ou cliquez pour sélectionner</p>
                             </label>
                             <input type="file" id="images" name="Images[]" accept="image/*" multiple style="display: none;">
@@ -933,7 +933,7 @@
             <div class="about-card">
                 <div class="about-card-inner">
                     <div class="about-card-front">
-                        <img src="../images/papa.jpg" alt="Papa" />
+                        <img src="./images/papa.jpg" alt="Papa" />
                     </div>
                     <div class="about-card-back">
                         <p>Le père avec ses 35 ans dans le métier de la carrosserie peinture</p>
@@ -943,7 +943,7 @@
             <div class="about-card">
                 <div class="about-card-inner">
                     <div class="about-card-front">
-                        <img src="../images/celia.jpg" alt="Celia" />
+                        <img src="./images/celia.jpg" alt="Celia" />
                     </div>
                     <div class="about-card-back">
                         <p>La fille titulaire d'un CAP de préparatrice en carrosserie</p>
@@ -953,7 +953,7 @@
             <div class="about-card">
                 <div class="about-card-inner">
                     <div class="about-card-front">
-                        <img src="../images/frere.jpg" alt="Frère" />
+                        <img src="./images/frere.jpg" alt="Frère" />
                     </div>
                     <div class="about-card-back">
                         <p>Le frère, passionné par les voitures et leur entretien</p>
@@ -965,13 +965,13 @@
 
     <footer>
         <div class="footer-icons">
-            <img src="../images/icones/appel-telephonique.png" alt="Téléphone" />
-            <img src="../images/icones/email.png" alt="Email" />
+            <img src="./images/icones/appel-telephonique.png" alt="Téléphone" />
+            <img src="./images/icones/email.png" alt="Email" />
         </div>
         <p>© 2024 Restaur Real Auto</p>
         <div class="footer-icons">
-            <img src="../images/icones/google-maps.png" alt="Localisation" />
-            <img src="../images/icones/instagram.png" alt="Instagram" />
+            <img src="./images/icones/google-maps.png" alt="Localisation" />
+            <img src="./images/icones/instagram.png" alt="Instagram" />
         </div>
     </footer>
 
