--- a/peinture.html
+++ b/peinture.html
@@ -11,7 +11,7 @@
   <style>
     main {
       position: relative;
-      background: url('./images/peinture.png') no-repeat center center/cover;
+      background: url('/images/peinture.png') no-repeat center center/cover;
       background-attachment: fixed;
       min-height: 100vh;
       padding: 60px 20px;
@@ -181,11 +181,11 @@
       </ul>
     </div>
     <div class="hero">
-      <img src="./images/logo.png" alt="Logo Restaur Real Auto" class="logo" />
+      <img src="/images/logo.png" alt="Logo Restaur Real Auto" class="logo" />
     </div>
     <div class="header-icons">
-      <img src="./images/icones/calendrier.png" alt="Calendrier" />
-      <img src="./images/icones/utilisateur.png" alt="Utilisateur" />
+      <img src="/images/icones/calendrier.png" alt="Calendrier" />
+      <img src="/images/icones/utilisateur.png" alt="Utilisateur" />
     </div>
   </header>
 
@@ -199,7 +199,7 @@
           Grâce à notre expertise en peinture, nous redonnons vie à la carrosserie de votre véhicule. Que ce soit pour une retouche locale ou une peinture complète, nous utilisons des peintures de haute qualité et des techniques modernes pour un résultat impeccable.
         </p>
         <div class="before-after">
-          <img src="./images/peinture.png" alt="Carrosserie avant réparation de peinture">
+          <img src="/images/peinture.png" alt="Carrosserie avant réparation de peinture">
         </div>
         <p>
           Nous garantissons une finition parfaite, respectueuse des couleurs d’origine et durable dans le temps. Chaque intervention est réalisée avec soin pour redonner à votre véhicule son éclat d’origine.
@@ -222,13 +222,13 @@
   <!-- FOOTER - NE PAS TOUCHER -->
   <footer role="contentinfo">
     <div class="footer-icons left">
-      <img src="./images/icones/appel-telephonique.png" alt="Téléphone" />
-      <img src="./images/icones/email.png" alt="Email" />
+      <img src="/images/icones/appel-telephonique.png" alt="Téléphone" />
+      <img src="/images/icones/email.png" alt="Email" />
     </div>
     <p>&copy; 2024 Restaur Real Auto</p>
     <div class="footer-icons right">
-      <img src="./images/icones/google-maps.png" alt="Localisation" />
-      <img src="./images/icones/instagram.png" alt="Instagram" />
+      <img src="/images/icones/google-maps.png" alt="Localisation" />
+      <img src="/images/icones/instagram.png" alt="Instagram" />
     </div>
   </footer>
 
