--- a/perso.html
+++ b/perso.html
@@ -11,7 +11,7 @@
   <style>
     main {
       position: relative;
-      background: url('./images/covering.png') no-repeat center center/cover;
+      background: url('/images/covering.png') no-repeat center center/cover;
       background-attachment: fixed;
       min-height: 100vh;
       padding: 60px 20px;
@@ -180,11 +180,11 @@
       </ul>
     </div>
     <div class="hero">
-      <img src="./images/logo.png" alt="Logo Restaur Real Auto" class="logo" />
+      <img src="/images/logo.png" alt="Logo Restaur Real Auto" class="logo" />
     </div>
     <div class="header-icons">
-      <img src="./images/icones/calendrier.png" alt="Calendrier" />
-      <img src="./images/icones/utilisateur.png" alt="Utilisateur" />
+      <img src="/images/icones/calendrier.png" alt="Calendrier" />
+      <img src="/images/icones/utilisateur.png" alt="Utilisateur" />
     </div>
   </header>
 
@@ -198,7 +198,7 @@
           Grâce à notre expertise en personnalisation, nous transformons votre véhicule pour qu'il reflète votre style unique. Que ce soit des modifications esthétiques ou des ajouts d'accessoires, nous réalisons vos souhaits avec précision et créativité.
         </p>
         <div class="before-after">
-          <img src="./images/covering.png" alt="Véhicule avant et après personnalisation">
+          <img src="/images/covering.png" alt="Véhicule avant et après personnalisation">
         </div>
         <p>
           Nous utilisons des matériaux de haute qualité et des techniques modernes pour garantir un résultat exceptionnel. Chaque projet est réalisé avec soin pour répondre à vos attentes.
@@ -221,13 +221,13 @@
   <!-- FOOTER - NE PAS TOUCHER -->
   <footer role="contentinfo">
     <div class="footer-icons left">
-      <img src="./images/icones/appel-telephonique.png" alt="Téléphone" />
-      <img src="./images/icones/email.png" alt="Email" />
+      <img src="/images/icones/appel-telephonique.png" alt="Téléphone" />
+      <img src="/images/icones/email.png" alt="Email" />
     </div>
     <p>&copy; 2024 Restaur Real Auto</p>
     <div class="footer-icons right">
-      <img src="./images/icones/google-maps.png" alt="Localisation" />
-      <img src="./images/icones/instagram.png" alt="Instagram" />
+      <img src="/images/icones/google-maps.png" alt="Localisation" />
+      <img src="/images/icones/instagram.png" alt="Instagram" />
     </div>
   </footer>
 
