--- a/restauration.html
+++ b/restauration.html
@@ -199,11 +199,11 @@ p {
       </ul>
     </nav>
     <div class="hero">
-      <img src="./images/logo.png" alt="Logo Restaur Real Auto" class="logo" />
+      <img src="/images/logo.png" alt="Logo Restaur Real Auto" class="logo" />
     </div>
     <div class="header-icons">
-      <img src="./images/icones/calendrier.png" alt="Calendrier" />
-      <img src="./images/icones/utilisateur.png" alt="Utilisateur" />
+      <img src="/images/icones/calendrier.png" alt="Calendrier" />
+      <img src="/images/icones/utilisateur.png" alt="Utilisateur" />
     </div>
   </header>
 
@@ -218,7 +218,7 @@ p {
 
         <div class="card-container" id="sablage">
           <div class="card-image">
-            <img src="./images/sablageav.png" alt="Sablage" />
+            <img src="/images/sablageav.png" alt="Sablage" />
             <div class="card-label">Sablage</div>
           </div>
           <div class="card-content">
@@ -232,7 +232,7 @@ p {
 
         <div class="card-container" id="tolerie">
           <div class="card-image">
-            <img src="./images/tole.png" alt="Tôlerie" />
+            <img src="/images/tole.png" alt="Tôlerie" />
             <div class="card-label">Tôlerie</div>
           </div>
           <div class="card-content">
@@ -244,7 +244,7 @@ p {
 
         <div class="card-container" id="peinture">
           <div class="card-image">
-            <img src="./images/peinture.png" alt="Peinture" />
+            <img src="/images/peinture.png" alt="Peinture" />
             <div class="card-label">Peinture</div>
           </div>
           <div class="card-content">
@@ -256,7 +256,7 @@ p {
 
         <div class="card-container" id="meca">
           <div class="card-image">
-            <img src="./images/meca.png" alt="Mécanique" />
+            <img src="/images/meca.png" alt="Mécanique" />
             <div class="card-label">Mécanique</div>
           </div>
           <div class="card-content">
@@ -268,7 +268,7 @@ p {
 
         <div class="card-container" id="sellerie">
           <div class="card-image">
-            <img src="./images/sellerie.png" alt="Sellerie" />
+            <img src="/images/sellerie.png" alt="Sellerie" />
             <div class="card-label">Sellerie</div>
           </div>
           <div class="card-content">
@@ -280,7 +280,7 @@ p {
 
         <div class="card-container" id="perso">
           <div class="card-image">
-            <img src="./images/nettoyage.jpg" alt="Personnalisation" />
+            <img src="/images/nettoyage.jpg" alt="Personnalisation" />
             <div class="card-label">Personnalisation</div>
           </div>
           <div class="card-content">
@@ -296,13 +296,13 @@ p {
 
   <footer role="contentinfo">
     <div class="footer-icons left">
-      <img src="./images/icones/appel-telephonique.png" alt="Téléphone" />
-      <img src="./images/icones/email.png" alt="Email" />
+      <img src="/images/icones/appel-telephonique.png" alt="Téléphone" />
+      <img src="/images/icones/email.png" alt="Email" />
     </div>
     <p>&copy; 2024 Restaur Real Auto</p>
     <div class="footer-icons right">
-      <img src="./images/icones/google-maps.png" alt="Localisation" />
-      <img src="./images/icones/instagram.png" alt="Calendrier" />
+      <img src="/images/icones/google-maps.png" alt="Localisation" />
+      <img src="/images/icones/instagram.png" alt="Calendrier" />
     </div>
   </footer>
 </body>
