--- a/sablage.html
+++ b/sablage.html
@@ -11,7 +11,7 @@
   <style>
     main {
       position: relative;
-      background: url('./images/sablageav.png') no-repeat center center/cover;
+      background: url('/images/sablageav.png') no-repeat center center/cover;
       background-attachment: fixed;
       min-height: 100vh;
       padding: 60px 20px;
@@ -179,11 +179,11 @@
       </ul>
     </div>
     <div class="hero">
-      <img src="./images/logo.png" alt="Logo Restaur Real Auto" class="logo" />
+      <img src="/images/logo.png" alt="Logo Restaur Real Auto" class="logo" />
     </div>
     <div class="header-icons">
-      <img src="./images/icones/calendrier.png" alt="Calendrier" />
-      <img src="./images/icones/utilisateur.png" alt="Utilisateur" />
+      <img src="/images/icones/calendrier.png" alt="Calendrier" />
+      <img src="/images/icones/utilisateur.png" alt="Utilisateur" />
     </div>
   </header>
 
@@ -197,7 +197,7 @@
           Le sablage permet d’enlever efficacement la rouille, les anciennes couches de peinture et les impuretés incrustées. C’est une étape essentielle pour repartir sur une base saine avant la peinture ou la tôlerie.
         </p>
         <div class="before-after">
-          <img src="./images/sablageav.png" alt="Carrosserie avant sablage">
+          <img src="/images/sablageav.png" alt="Carrosserie avant sablage">
         </div>
         <p>
           Nos spécialistes utilisent des équipements modernes et respectueux de la carrosserie pour garantir un résultat propre, uniforme et sans déformation. Que vous restauriez un véhicule de collection ou une voiture de tous les jours, notre service est adapté à vos exigences.
@@ -221,13 +221,13 @@
   <!-- FOOTER - NE PAS TOUCHER -->
   <footer role="contentinfo">
     <div class="footer-icons left">
-      <img src="./images/icones/appel-telephonique.png" alt="Téléphone" />
-      <img src="./images/icones/email.png" alt="Email" />
+      <img src="/images/icones/appel-telephonique.png" alt="Téléphone" />
+      <img src="/images/icones/email.png" alt="Email" />
     </div>
     <p>&copy; 2024 Restaur Real Auto</p>
     <div class="footer-icons right">
-      <img src="./images/icones/google-maps.png" alt="Localisation" />
-      <img src="./images/icones/instagram.png" alt="Instagram" />
+      <img src="/images/icones/google-maps.png" alt="Localisation" />
+      <img src="/images/icones/instagram.png" alt="Instagram" />
     </div>
   </footer>
 
