--- a/sellerie.html
+++ b/sellerie.html
@@ -11,7 +11,7 @@
   <style>
     main {
       position: relative;
-      background: url('./images/sellerie.png') no-repeat center center/cover;
+      background: url('/images/sellerie.png') no-repeat center center/cover;
       background-attachment: fixed;
       min-height: 100vh;
       padding: 60px 20px;
@@ -181,11 +181,11 @@
       </ul>
     </div>
     <div class="hero">
-      <img src="./images/logo.png" alt="Logo Restaur Real Auto" class="logo" />
+      <img src="/images/logo.png" alt="Logo Restaur Real Auto" class="logo" />
     </div>
     <div class="header-icons">
-      <img src="./images/icones/calendrier.png" alt="Calendrier" />
-      <img src="./images/icones/utilisateur.png" alt="Utilisateur" />
+      <img src="/images/icones/calendrier.png" alt="Calendrier" />
+      <img src="/images/icones/utilisateur.png" alt="Utilisateur" />
     </div>
   </header>
 
@@ -199,7 +199,7 @@
           Grâce à notre expertise en sellerie, nous redonnons vie à vos sièges et intérieurs de véhicules. Que ce soit pour une réparation de cuir, de tissu ou une restauration complète, nous utilisons des matériaux de haute qualité pour un résultat impeccable.
         </p>
         <div class="before-after">
-          <img src="./images/sellerie.png" alt="Sièges avant réparation de sellerie">
+          <img src="/images/sellerie.png" alt="Sièges avant réparation de sellerie">
         </div>
         <p>
           Nous garantissons un travail soigné et durable, respectueux des matériaux d’origine. Chaque intervention est réalisée avec précision pour redonner à votre intérieur son confort et son esthétique.
@@ -222,13 +222,13 @@
   <!-- FOOTER - NE PAS TOUCHER -->
   <footer role="contentinfo">
     <div class="footer-icons left">
-      <img src="./images/icones/appel-telephonique.png" alt="Téléphone" />
-      <img src="./images/icones/email.png" alt="Email" />
+      <img src="/images/icones/appel-telephonique.png" alt="Téléphone" />
+      <img src="/images/icones/email.png" alt="Email" />
     </div>
     <p>&copy; 2024 Restaur Real Auto</p>
     <div class="footer-icons right">
-      <img src="./images/icones/google-maps.png" alt="Localisation" />
-      <img src="./images/icones/instagram.png" alt="Instagram" />
+      <img src="/images/icones/google-maps.png" alt="Localisation" />
+      <img src="/images/icones/instagram.png" alt="Instagram" />
     </div>
   </footer>
 
