--- a/meca.html
+++ b/meca.html
@@ -11,7 +11,7 @@
   <style>
     main {
       position: relative;
-      background: url('./images/meca.png') no-repeat center center/cover;
+      background: url('/images/meca.png') no-repeat center center/cover;
       background-attachment: fixed;
       min-height: 100vh;
       padding: 60px 20px;
@@ -181,11 +181,11 @@
       </ul>
     </div>
     <div class="hero">
-      <img src="./images/logo.png" alt="Logo Restaur Real Auto" class="logo" />
+      <img src="/images/logo.png" alt="Logo Restaur Real Auto" class="logo" />
     </div>
     <div class="header-icons">
-      <img src="./images/icones/calendrier.png" alt="Calendrier" />
-      <img src="./images/icones/utilisateur.png" alt="Utilisateur" />
+      <img src="/images/icones/calendrier.png" alt="Calendrier" />
+      <img src="/images/icones/utilisateur.png" alt="Utilisateur" />
     </div>
   </header>
 
@@ -199,7 +199,7 @@
           Grâce à notre expertise en mécanique, nous assurons la réparation et l'entretien de votre véhicule. Que ce soit pour une révision complète, un remplacement de pièces ou une réparation moteur, nous utilisons des équipements modernes pour un service de qualité.
         </p>
         <div class="before-after">
-          <img src="./images/meca.png" alt="Moteur avant réparation mécanique">
+          <img src="/images/meca.png" alt="Moteur avant réparation mécanique">
         </div>
         <p>
           Nous garantissons un travail précis et durable, respectueux des normes constructeurs. Chaque intervention est réalisée avec soin pour maintenir votre véhicule en parfait état de fonctionnement.
@@ -222,13 +222,13 @@
   <!-- FOOTER - NE PAS TOUCHER -->
   <footer role="contentinfo">
     <div class="footer-icons left">
-      <img src="./images/icones/appel-telephonique.png" alt="Téléphone" />
-      <img src="./images/icones/email.png" alt="Email" />
+      <img src="/images/icones/appel-telephonique.png" alt="Téléphone" />
+      <img src="/images/icones/email.png" alt="Email" />
     </div>
     <p>&copy; 2024 Restaur Real Auto</p>
     <div class="footer-icons right">
-      <img src="./images/icones/google-maps.png" alt="Localisation" />
-      <img src="./images/icones/instagram.png" alt="Instagram" />
+      <img src="/images/icones/google-maps.png" alt="Localisation" />
+      <img src="/images/icones/instagram.png" alt="Instagram" />
     </div>
   </footer>
 
