--- a/nettoyage.html
+++ b/nettoyage.html
@@ -183,11 +183,11 @@
           </ul>
       </nav>
       <div class="hero">
-          <img src="./images/logo.png" alt="Logo Restaur Real Auto" class="logo" />
+          <img src="/images/logo.png" alt="Logo Restaur Real Auto" class="logo" />
       </div>
       <div class="header-icons">
-          <img src="./images/icones/calendrier.png" alt="Calendrier" />
-          <img src="./images/icones/utilisateur.png" alt="Utilisateur" />
+          <img src="/images/icones/calendrier.png" alt="Calendrier" />
+          <img src="/images/icones/utilisateur.png" alt="Utilisateur" />
       </div>
   </header>
   
@@ -201,7 +201,7 @@
         <div class="service-cards">
           <div class="card-container">
             <div class="card-image">
-              <img src="./images/nettoyage.jpg" alt="Nettoyage Intérieur" />
+              <img src="/images/nettoyage.jpg" alt="Nettoyage Intérieur" />
               <div class="card-label">Intérieur</div>
               <h2 class="neon-title">Nettoyage Intérieur</h2> <!-- Titre en néon -->
             </div>
@@ -221,7 +221,7 @@
   
           <div class="card-container">
             <div class="card-image">
-              <img src="./images/nettoyage.jpg" alt="Nettoyage Extérieur" />
+              <img src="/images/nettoyage.jpg" alt="Nettoyage Extérieur" />
               <div class="card-label">Extérieur</div>
               <h2 class="neon-title">Nettoyage Extérieur</h2> <!-- Titre en néon -->
             </div>
@@ -241,7 +241,7 @@
   
           <div class="card-container">
             <div class="card-image">
-              <img src="./images/nettoyage.jpg" alt="Nettoyage Complet" />
+              <img src="/images/nettoyage.jpg" alt="Nettoyage Complet" />
               <div class="card-label">Complet</div>
               <h2 class="neon-title">Nettoyage Complet</h2> <!-- Titre en néon -->
             </div>
@@ -264,13 +264,13 @@
   
     <footer>
       <div class="footer-icons">
-        <img src="./images/icones/appel-telephonique.png" alt="Téléphone" />
-        <img src="./images/icones/email.png" alt="Email" />
+        <img src="/images/icones/appel-telephonique.png" alt="Téléphone" />
+        <img src="/images/icones/email.png" alt="Email" />
       </div>
       <p>© 2024 Restaur Real Auto</p>
       <div class="footer-icons">
-        <img src="./images/icones/google-maps.png" alt="Localisation" />
-        <img src="./images/icones/instagram.png" alt="Instagram" />
+        <img src="/images/icones/google-maps.png" alt="Localisation" />
+        <img src="/images/icones/instagram.png" alt="Instagram" />
       </div>
     </footer>
   </body>
