--- a/tolerie.html
+++ b/tolerie.html
@@ -11,7 +11,7 @@
   <style>
     main {
       position: relative;
-      background: url('./images/tole.png') no-repeat center center/cover;
+      background: url('/images/tole.png') no-repeat center center/cover;
       background-attachment: fixed;
       min-height: 100vh;
       padding: 60px 20px;
@@ -180,11 +180,11 @@
       </ul>
     </div>
     <div class="hero">
-      <img src="./images/logo.png" alt="Logo Restaur Real Auto" class="logo" />
+      <img src="/images/logo.png" alt="Logo Restaur Real Auto" class="logo" />
     </div>
     <div class="header-icons">
-      <img src="./images/icones/calendrier.png" alt="Calendrier" />
-      <img src="./images/icones/utilisateur.png" alt="Utilisateur" />
+      <img src="/images/icones/calendrier.png" alt="Calendrier" />
+      <img src="/images/icones/utilisateur.png" alt="Utilisateur" />
     </div>
   </header>
 
@@ -198,7 +198,7 @@
           Grâce à notre expertise en tôlerie, nous intervenons sur les bosses, les déformations ou les dégâts causés par un accident. Chaque détail est repris avec précision pour redonner à votre véhicule son apparence d’origine.
         </p>
         <div class="before-after">
-          <img src="./images/tole.png" alt="Carrosserie avant réparation de tôlerie">
+          <img src="/images/tole.png" alt="Carrosserie avant réparation de tôlerie">
         </div>
         <p>
           Nous utilisons des techniques modernes et des outils spécialisés pour garantir un résultat impeccable, durable et conforme aux normes constructeurs. Que ce soit une aile froissée ou un capot déformé, nous avons la solution.
@@ -221,13 +221,13 @@
   <!-- FOOTER - NE PAS TOUCHER -->
   <footer role="contentinfo">
     <div class="footer-icons left">
-      <img src="./images/icones/appel-telephonique.png" alt="Téléphone" />
-      <img src="./images/icones/email.png" alt="Email" />
+      <img src="/images/icones/appel-telephonique.png" alt="Téléphone" />
+      <img src="/images/icones/email.png" alt="Email" />
     </div>
     <p>&copy; 2024 Restaur Real Auto</p>
     <div class="footer-icons right">
-      <img src="./images/icones/google-maps.png" alt="Localisation" />
-      <img src="./images/icones/instagram.png" alt="Instagram" />
+      <img src="/images/icones/google-maps.png" alt="Localisation" />
+      <img src="/images/icones/instagram.png" alt="Instagram" />
     </div>
   </footer>
 
