--- a/entretien.html
+++ b/entretien.html
@@ -4,139 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Entretien - Restaur Real Auto</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="style.css" />
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
-
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #000;
-      color: #fff;
-      line-height: 1.6;
-    }
-
-    h1 {
-      font-family: 'Bebas Neue', sans-serif;
-      font-size: 4rem;
-      text-transform: uppercase;
-      color: #c3964d;
-      text-align: center;
-      margin-bottom: 20px;
-    }
-
-    .header {
-      background-image: url('/images/Bandeau.png');
-      background-size: cover;
-      background-position: center;
-      height: auto;
-      position: relative;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    .navbar {
-      display: flex;
-      justify-content: center;
-      padding: 15px;
-      width: 100%;
-      position: absolute;
-      left: 0;
-      z-index: 100;
-    }
-
-    .navbar ul {
-      list-style: none;
-      display: flex;
-      width: 80%;
-      padding: 0;
-      margin: 0;
-      justify-content: space-around;
-    }
-
-    .navbar li {
-      text-align: center;
-    }
-
-    .navbar a {
-      display: block;
-      text-decoration: none;
-      color: white;
-      padding: 10px 20px;
-      border-radius: 10px;
-      font-weight: bold;
-      background: rgba(255, 255, 255, 0.05);
-      backdrop-filter: blur(10px);
-      border: 1px solid rgba(255, 255, 255, 0.1);
-      box-shadow:
-        8px 8px 20px rgba(0, 0, 0, 0.2),
-        -8px -8px 20px rgba(255, 255, 255, 0.05),
-        0 0 15px rgba(212, 175, 55, 0.4);
-      text-shadow:
-        0 0 5px #c3964d,
-        0 0 10px #c3964d,
-        0 0 20px #d4af37,
-        0 0 40px #d4af37;
-      transition: all 0.3s ease-in-out;
-    }
-
-    .navbar a:hover {
-      background: rgba(255, 255, 255, 0.08);
-      box-shadow:
-        8px 8px 30px rgba(0, 0, 0, 0.3),
-        -8px -8px 30px rgba(255, 255, 255, 0.1),
-        0 0 25px rgba(255, 215, 0, 0.5);
-      text-shadow:
-        0 0 10px #fff8dc,
-        0 0 20px #ffd700,
-        0 0 30px #ffd700,
-        0 0 50px #ffec8b;
-    }
-
-    .hero {
-      position: relative;
-      padding: 50px 20px;
-      text-align: center;
-      margin-top: 50px;
-    }
-
-    .hero .logo {
-      z-index: 100;
-      width: 300px;
-      max-width: 100%;
-      height: auto;
-      animation: pulse 2s infinite alternate;
-    }
-
-    @keyframes pulse {
-      0% {
-        transform: scale(1);
-        opacity: 0.8;
-      }
-      100% {
-        transform: scale(1.1);
-        opacity: 1;
-      }
-    }
-
-    .header-icons {
-      position: absolute;
-      bottom: 20px;
-      right: 20px;
-      display: flex;
-      gap: 20px;
-    }
-
-    .header-icons img {
-      width: 40px;
-    }
-
+   
     .services {
       padding: 40px 20px;
       text-align: center;
@@ -320,20 +190,27 @@
   <header class="header">
     <nav class="navbar" aria-label="Main Navigation">
       <ul>
-        <li><a href="index.html">Accueil</a></li>
-        <li><a href="restauration.html">Restauration</a></li>
-        <li><a href="entretien.html">Entretien</a></li>
-        <li><a href="nettoyage.html">Nettoyage</a></li>
-        <li><a href="evenementiel.html">Événementiel</a></li>
+          <li><a href="index.html">Accueil</a></li>
+          <li class="dropdown">
+            <a href="restauration.html">Restauration</a>
+            <div class="dropdown-content">
+              <a href="sablage.html">Sablage</a>
+              <a href="tolerie.html">Tôlerie</a>
+              <a href="peinture.html">Peinture</a>
+              <a href="meca.html">Mécanique</a>
+              <a href="sellerie.html">Sellerie</a>
+              <a href="perso.html">Personnalisation</a>
+            </div>
+          </li>
+          <li><a href="entretien.html">Entretien</a></li>
+          <li><a href="nettoyage.html">Nettoyage</a></li>
+          <li><a href="evenementiel.html">Événementiel</a></li>
       </ul>
     </nav>
     <div class="hero">
       <img src="/images/logo.png" alt="Logo Restaur Real Auto" class="logo" />
     </div>
-    <div class="header-icons">
-      <img src="/images/icones/calendrier.png" alt="Calendrier" />
-      <img src="/images/icones/utilisateur.png" alt="Utilisateur" />
-    </div>
+   
   </header>
 
   <main role="main">
