--- a/evenementiel.html
+++ b/evenementiel.html
@@ -8,8 +8,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <style>
         body {
-          font-family: Arial, sans-serif;
-            background-color: #ffffff; /* Fond blanc pour un look épuré */
+            font-family: Arial, sans-serif;
+            background-color: #f9f9f9; /* Fond légèrement gris pour un look moderne */
             color: #333;
             line-height: 1.6;
             margin: 0;
@@ -31,7 +31,7 @@
             overflow: hidden;
             position: relative;
             margin-bottom: 40px;
-            max-width: 1100px;
+            max-width: 800px; /* Réduit la largeur du carrousel */
             height: auto;
             margin-left: auto;
             margin-right: auto;
@@ -48,7 +48,6 @@
             min-width: 100%;
             display: flex;
             flex-direction: column;
-          
             border-radius: 15px;
             overflow: hidden;
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
@@ -56,13 +55,13 @@
         }
         .vehicle-image-container {
             width: 100%;
-            height: auto;
+            height: 400px; /* Hauteur fixe pour les images */
             overflow: hidden;
             position: relative;
         }
         .vehicle-image {
             width: 100%;
-            height: auto;
+            height: 100%;
             object-fit: cover;
             transition: transform 0.4s ease-in-out;
         }
@@ -77,6 +76,8 @@
             justify-content: center;
             align-items: center;
             text-align: center;
+            background-color: #f9f9f9; /* Fond gris clair pour les détails */
+            border-top: 1px solid #ddd;
         }
         .vehicle-details h3 {
             font-family: 'Bebas Neue', sans-serif;
@@ -136,146 +137,88 @@
         .carousel-controls button:hover {
             opacity: 0.8;
         }
-        .services-slider {
+        .thumbnails {
+            display: flex;
+            justify-content: center;
+            gap: 10px;
+            margin-top: 10px;
+        }
+        .thumbnail {
+            width: 80px;
+            height: 60px;
+            border: 2px solid transparent;
+            cursor: pointer;
+            transition: border-color 0.3s ease;
+        }
+        .thumbnail img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+        .thumbnail:hover,
+        .thumbnail.active {
+            border-color: #c3964d;
+        }
+        .services-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+            margin: 40px 0;
+        }
+        .service-card {
+            background-color: #fff;
             border-radius: 15px;
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
-            width: 300px; /* Réduit la largeur */
-            color: #333;
             padding: 20px;
             text-align: center;
-            margin: 0 auto 60px auto; /* Centre horizontalement avec auto sur les marges gauche et droite */
-            background-color: whitesmoke; /* Fond rouge pour les services */
-            display: block; /* Assure que l'élément est traité comme un bloc */
+            transition: transform 0.3s ease;
         }
-
-        .services-slider h2 {
-            font-family: 'Bebas Neue', sans-serif;
-            font-size: 2.5rem;
-            margin-bottom: 30px;
-            letter-spacing: 1px;
-            color: #c3964d;
+        .service-card:hover {
+            transform: translateY(-5px);
         }
-        .slider-wrapper {
-            overflow: hidden;
-            position: relative;
-            width: 100%;
-            margin: 0 auto;
-            height: 100px;
-        }
-        .slide-container {
-            display: flex;
-            transition: transform 0.8s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-            height: 100%;
-            align-items: center;
-        }
-        .slide {
-            min-width: 100%;
-            padding: 15px;
-            box-sizing: border-box;
-            text-align: center;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            height: 100%;
-        }
-        .slide h3 {
+        .service-card h3 {
             font-family: 'Bebas Neue', sans-serif;
             font-size: 2rem;
-            margin-bottom: 5px;
             color: #333;
+            margin-bottom: 10px;
         }
-        .slide p {
-            font-size: 1rem; /* Ajustez la taille de la police pour une meilleure lisibilité */
-            line-height: 1.6; /* Augmentez l'interligne pour améliorer la lisibilité */
-            color: #c3964d; /* Conservez la couleur dorée pour le texte */
-            margin: 10px 0; /* Ajoutez une marge pour espacer le texte */
-            font-weight: 700; /* Ajustez l'épaisseur de la police si nécessaire */
-            opacity: 0.9; /* Réduisez légèrement l'opacité pour un effet subtil */
-        }
-
-        .slider-controls-services {
-            position: absolute;
-            top: 50%;
-            left: 10px;
-            right: 10px;
-            display: flex;
-            justify-content: space-between;
-            transform: translateY(-50%);
-        }
-        .slider-controls-services button {
-            background: rgba(0, 0, 0, 0.1);
-            border: none;
-            color: #333;
-            font-size: 1.5rem;
-            cursor: pointer;
-            opacity: 0.5;
-            border-radius: 5px;
-            padding: 5px 10px;
-            transition: opacity 0.3s ease;
-        }
-        .slider-controls-services button:hover {
-            opacity: 0.8;
-        }
-        .dropdown {
-            position: relative;
-            display: inline-block;
-        }
-        .dropdown-content {
-            display: none;
-            position: absolute;
-            background-color: #c3964d;
-            min-width: 160px;
-            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-            z-index: 1;
-            left: 50%;
-            transform: translateX(-50%);
-        }
-        .dropdown-content a {
-            color: black;
-            padding: 12px 16px;
-            text-decoration: none;
-            display: block;
-            text-align: center;
-        }
-        .dropdown-content a:hover {
-            background-color: #ddd;
-        }
-        .dropdown:hover .dropdown-content {
-            display: block;
+        .service-card p {
+            font-size: 1rem;
+            color: #c3964d;
+            margin: 10px 0;
+            font-weight: 700;
+            opacity: 0.9;
         }
     </style>
 </head>
 <body>
 
+  
     <header class="header">
         <nav class="navbar" aria-label="Main Navigation">
-            <ul>
-                <li><a href="index.html">Accueil</a></li>
-                <li class="dropdown">
-                    <a href="restauration.html">Restauration</a>
-                    <div class="dropdown-content">
-                        <a href="sablage.html">Sablage</a>
-                        <a href="tolerie.html">Tôlerie</a>
-                        <a href="peinture.html">Peinture</a>
-                        <a href="meca.html">Mécanique</a>
-                        <a href="sellerie.html">Sellerie</a>
-                        <a href="perso.html">Personnalisation</a>
-                    </div>
-                </li>
-                <li><a href="entretien.html">Entretien</a></li>
-                <li><a href="nettoyage.html">Nettoyage</a></li>
-                <li><a href="evenementiel.html">Événementiel</a></li>
-                <li><a href="location.html">Location</a></li>
-            </ul>
+          <ul>
+              <li><a href="index.html">Accueil</a></li>
+              <li class="dropdown">
+                <a href="restauration.html">Restauration</a>
+                <div class="dropdown-content">
+                  <a href="sablage.html">Sablage</a>
+                  <a href="tolerie.html">Tôlerie</a>
+                  <a href="peinture.html">Peinture</a>
+                  <a href="meca.html">Mécanique</a>
+                  <a href="sellerie.html">Sellerie</a>
+                  <a href="perso.html">Personnalisation</a>
+                </div>
+              </li>
+              <li><a href="entretien.html">Entretien</a></li>
+              <li><a href="nettoyage.html">Nettoyage</a></li>
+              <li><a href="evenementiel.html">Événementiel</a></li>
+          </ul>
         </nav>
         <div class="hero">
-            <img src="/images/logo.png" alt="Logo Restaur Real Auto" class="logo" />
+          <img src="/images/logo.png" alt="Logo Restaur Real Auto" class="logo" />
         </div>
-        <div class="header-icons">
-            <img src="/images/icones/calendrier.png" alt="Calendrier" />
-            <img src="/images/icones/utilisateur.png" alt="Utilisateur" />
-        </div>
-    </header>
+       
+      </header>
 
     <main>
         <h1>Location de véhicules d'exception</h1>
@@ -285,6 +228,17 @@
                 <div class="vehicle-slide">
                     <div class="vehicle-image-container">
                         <img src="/images/CLASSE.jpg" alt="Mercedes Classe E" class="vehicle-image" />
+                    </div>
+                    <div class="thumbnails">
+                        <div class="thumbnail active">
+                            <img src="/images/SERIE5.jpg" alt="Thumbnail 1" />
+                        </div>
+                        <div class="thumbnail">
+                            <img src="/images/CLASSE.jpg" alt="Thumbnail 2" />
+                        </div>
+                        <div class="thumbnail">
+                            <img src="/images/CLASSE.jpg" alt="Thumbnail 3" />
+                        </div>
                     </div>
                     <div class="vehicle-details">
                         <h3>Mercedes Classe E</h3>
@@ -297,6 +251,17 @@
                     <div class="vehicle-image-container">
                         <img src="/images/AUDIA6.webp" alt="Audi A6" class="vehicle-image" />
                     </div>
+                    <div class="thumbnails">
+                        <div class="thumbnail active">
+                            <img src="/images/AUDIA6.webp" alt="Thumbnail 1" />
+                        </div>
+                        <div class="thumbnail">
+                            <img src="/images/AUDIA6.webp" alt="Thumbnail 2" />
+                        </div>
+                        <div class="thumbnail">
+                            <img src="/images/AUDIA6.webp" alt="Thumbnail 3" />
+                        </div>
+                    </div>
                     <div class="vehicle-details">
                         <h3>Audi A6</h3>
                         <p>Performance et technologie au service d'une expérience de conduite unique.</p>
@@ -307,6 +272,17 @@
                 <div class="vehicle-slide">
                     <div class="vehicle-image-container">
                         <img src="/images/SERIE5.jpg" alt="BMW Série 5" class="vehicle-image" />
+                    </div>
+                    <div class="thumbnails">
+                        <div class="thumbnail active">
+                            <img src="/images/SERIE5.jpg" alt="Thumbnail 1" />
+                        </div>
+                        <div class="thumbnail">
+                            <img src="/images/SERIE5.jpg" alt="Thumbnail 2" />
+                        </div>
+                        <div class="thumbnail">
+                            <img src="/images/SERIE5.jpg" alt="Thumbnail 3" />
+                        </div>
                     </div>
                     <div class="vehicle-details">
                         <h3>BMW Série 5</h3>
@@ -319,6 +295,17 @@
                     <div class="vehicle-image-container">
                         <img src="/images/EVOQUE.jpg" alt="Range Rover Evoque" class="vehicle-image" />
                     </div>
+                    <div class="thumbnails">
+                        <div class="thumbnail active">
+                            <img src="/images/EVOQUE.jpg" alt="Thumbnail 1" />
+                        </div>
+                        <div class="thumbnail">
+                            <img src="/images/EVOQUE.jpg" alt="Thumbnail 2" />
+                        </div>
+                        <div class="thumbnail">
+                            <img src="/images/EVOQUE.jpg" alt="Thumbnail 3" />
+                        </div>
+                    </div>
                     <div class="vehicle-details">
                         <h3>Range Rover Evoque</h3>
                         <p>Style affirmé et polyvalence pour toutes vos aventures.</p>
@@ -329,6 +316,17 @@
                 <div class="vehicle-slide">
                     <div class="vehicle-image-container">
                         <img src="/images/TURBOS.webp" alt="Porsche Cayenne" class="vehicle-image" />
+                    </div>
+                    <div class="thumbnails">
+                        <div class="thumbnail active">
+                            <img src="/images/TURBOS.webp" alt="Thumbnail 1" />
+                        </div>
+                        <div class="thumbnail">
+                            <img src="/images/TURBOS.webp" alt="Thumbnail 2" />
+                        </div>
+                        <div class="thumbnail">
+                            <img src="/images/TURBOS.webp" alt="Thumbnail 3" />
+                        </div>
                     </div>
                     <div class="vehicle-details">
                         <h3>Porsche Cayenne</h3>
@@ -344,35 +342,26 @@
             </div>
         </section>
 
-        <section class="services-slider">
-            <h2>Services additionnels</h2>
-            <div class="slider-wrapper">
-                <div class="slide-container" id="slideContainerServices">
-                    <div class="slide">
-                        <h3>Chauffeur privé</h3>
-                        <p>Voyagez en toute sérénité.</p>
-                    </div>
-                    <div class="slide">
-                        <h3>Livraison personnalisée</h3>
-                        <p>Votre véhicule où vous voulez.</p>
-                    </div>
-                    <div class="slide">
-                        <h3>Assurance premium</h3>
-                        <p>Roulez l'esprit tranquille.</p>
-                    </div>
-                    <div class="slide">
-                        <h3>Équipements sur demande</h3>
-                        <p>Adaptez votre location.</p>
-                    </div>
-                    <div class="slide">
-                        <h3>Assistance 24h/7j</h3>
-                        <p>Nous sommes toujours là pour vous.</p>
-                    </div>
-                </div>
-                <div class="slider-controls-services">
-                    <button onclick="prevSlideServices()">&#10094;</button>
-                    <button onclick="nextSlideServices()">&#10095;</button>
-                </div>
+        <section class="services-grid">
+            <div class="service-card">
+                <h3>Chauffeur privé</h3>
+                <p>Voyagez en toute sérénité.</p>
+            </div>
+            <div class="service-card">
+                <h3>Livraison personnalisée</h3>
+                <p>Votre véhicule où vous voulez.</p>
+            </div>
+            <div class="service-card">
+                <h3>Assurance premium</h3>
+                <p>Roulez l'esprit tranquille.</p>
+            </div>
+            <div class="service-card">
+                <h3>Équipements sur demande</h3>
+                <p>Adaptez votre location.</p>
+            </div>
+            <div class="service-card">
+                <h3>Assistance 24h/7j</h3>
+                <p>Nous sommes toujours là pour vous.</p>
             </div>
         </section>
     </main>
@@ -413,27 +402,16 @@
 
       setInterval(nextVehicle, vehicleSpeed);
 
-      const slideContainerServices = document.getElementById('slideContainerServices');
-      const slidesServices = document.querySelectorAll('.slide');
-      let slideIndexServices = 0;
-      const serviceSpeed = 5000;
+      document.querySelectorAll('.thumbnail').forEach(thumb => {
+          thumb.addEventListener('click', function() {
+              const vehicleSlide = thumb.closest('.vehicle-slide');
+              const imgSrc = thumb.querySelector('img').src;
+              vehicleSlide.querySelector('.vehicle-image').src = imgSrc;
 
-      function nextSlideServices() {
-          slideIndexServices = (slideIndexServices + 1) % slidesServices.length;
-          updateSliderServices();
-      }
-
-      function prevSlideServices() {
-          slideIndexServices = (slideIndexServices - 1 + slidesServices.length) % slidesServices.length;
-          updateSliderServices();
-      }
-
-      function updateSliderServices() {
-          const translateValue = -slideIndexServices * 100 + '%';
-          slideContainerServices.style.transform = 'translateX(' + translateValue + ')';
-      }
-
-      setInterval(nextSlideServices, serviceSpeed);
-  </script>
+              document.querySelectorAll('.thumbnail').forEach(t => t.classList.remove('active'));
+              thumb.classList.add('active');
+          });
+      });
+    </script>
 </body>
 </html>
