--- a/mentions.html
+++ b/mentions.html
@@ -6,6 +6,31 @@
   <title>Mentions Légales</title>
   <link rel="stylesheet" href="consolidated.css">
 </head>
+<header class="header">
+  <nav class="navbar" aria-label="Main Navigation">
+    <ul>
+        <li><a href="index.html">Accueil</a></li>
+        <li class="dropdown">
+          <a href="restauration.html">Restauration</a>
+          <div class="dropdown-content">
+            <a href="sablage.html">Sablage</a>
+            <a href="tolerie.html">Tôlerie</a>
+            <a href="peinture.html">Peinture</a>
+            <a href="meca.html">Mécanique</a>
+            <a href="sellerie.html">Sellerie</a>
+            <a href="perso.html">Personnalisation</a>
+          </div>
+        </li>
+        <li><a href="entretien.html">Entretien</a></li>
+        <li><a href="nettoyage.html">Nettoyage</a></li>
+        <li><a href="evenementiel.html">Événementiel</a></li>
+    </ul>
+  </nav>
+  <div class="hero">
+    <img src="/images/logo.png" alt="Logo Restaur Real Auto" class="logo" />
+  </div>
+ 
+</header>
 <body class="mentions">
 
   <h1>Mentions Légales</h1>
