--- a/nettoyage.html
+++ b/nettoyage.html
@@ -173,23 +173,30 @@
   </head>
   <body>
     <header class="header">
-      <nav class="navbar">
-          <ul>
-              <li><a href="#accueil">Accueil</a></li>
-              <li><a href="restauration.html">Restauration</a></li>
-              <li><a href="entretien.html">Entretien</a></li>
-              <li><a href="nettoyage.html">Nettoyage</a></li>
-              <li><a href="evenementiel.html">Événementiel</a></li>
-          </ul>
+      <nav class="navbar" aria-label="Main Navigation">
+        <ul>
+            <li><a href="index.html">Accueil</a></li>
+            <li class="dropdown">
+              <a href="restauration.html">Restauration</a>
+              <div class="dropdown-content">
+                <a href="sablage.html">Sablage</a>
+                <a href="tolerie.html">Tôlerie</a>
+                <a href="peinture.html">Peinture</a>
+                <a href="meca.html">Mécanique</a>
+                <a href="sellerie.html">Sellerie</a>
+                <a href="perso.html">Personnalisation</a>
+              </div>
+            </li>
+            <li><a href="entretien.html">Entretien</a></li>
+            <li><a href="nettoyage.html">Nettoyage</a></li>
+            <li><a href="evenementiel.html">Événementiel</a></li>
+        </ul>
       </nav>
       <div class="hero">
-          <img src="/images/logo.png" alt="Logo Restaur Real Auto" class="logo" />
+        <img src="/images/logo.png" alt="Logo Restaur Real Auto" class="logo" />
       </div>
-      <div class="header-icons">
-          <img src="/images/icones/calendrier.png" alt="Calendrier" />
-          <img src="/images/icones/utilisateur.png" alt="Utilisateur" />
-      </div>
-  </header>
+     
+    </header>
   
     <main role="main">
       <section class="services" id="nettoyage" aria-labelledby="services-heading">
